--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="js/compatibility.js"></script>
+    <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/data.js"></script>
     <script src="js/angular.js"></script>
     <script src="js/angular-sanitize.min.js"></script>
