Enhanced the search functionality to allow finding more results, added a page for showing search features. Enhanced the UI. Added initial test.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Quran</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-xrwn77DEKeh3s/wNd3T6Rnv6SWLupen6fCgtHxdx0mFNMgR18grmG3Ojppt1wcEmf68VCfHhYXujE7ws0C5L5A==" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="style.css?v=3"/>
     <script src="js/compatibility.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
@@ -12,7 +16,7 @@
     <script src="js/angular.js"></script>
     <script src="js/angular-sanitize.min.js"></script>
     <script src="js/angular-route.js"></script>
-    <script src="js/app.js?v=6"></script>
+    <script src="js/app.js?v=7"></script>
 </head>
 <body data-ng-app="myApp">
 <div>
